--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "md5": "^2.2.1",
     "mkdirp": "^0.5.1",
     "request": "^2.83.0",
+    "request-promise": "^4.2.2",
     "ws": "^3.2.0"
   },
   "devDependencies": {},
